objects/Use_Case__c/Use_Case__c.object-meta.xml
<CustomObject>
    <description>SS-2649 Custom object to track master list of use cases that Tanium modules are used for within customer accounts</description>
    <label>Use Case</label>
    <nameField>
        <label>Use Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>