objects/Use_Case__c/fields/Module_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Module_Relationship__c</fullName>
    <inlineHelpText>Please choose the module that this use case most closely relates to or relies upon, if more than one, please choose the primary.</inlineHelpText>
    <label>Module Relationship</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Benchmark</fullName>
            </value>
            <value>
                <fullName>Certificate Manager</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>DEX</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Enforce</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Integrity Monitor</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Provision</fullName>
            </value>
            <value>
                <fullName>Reveal</fullName>
            </value>
            <value>
                <fullName>SBOM</fullName>
            </value>
            <value>
                <fullName>Screenmeet</fullName>
            </value>
            <value>
                <fullName>THR</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
                <isActive>false</isActive>
                <label>Connect</label>
            </value>
            <value>
                <fullName>Core (Interact)</fullName>
                <isActive>false</isActive>
                <label>Core (Interact)</label>
            </value>
            <value>
                <fullName>Core Platform</fullName>
                <isActive>false</isActive>
                <label>Core Platform</label>
            </value>
            <value>
                <fullName>Core Platform (Interact + Connect)</fullName>
                <isActive>false</isActive>
                <label>Core Platform (Interact + Connect)</label>
            </value>
            <value>
                <fullName>Core Platform (Interact)</fullName>
                <isActive>false</isActive>
                <label>Core Platform (Interact)</label>
            </value>
            <value>
                <fullName>Core Platform (Platform &amp; Connect)</fullName>
                <isActive>false</isActive>
                <label>Core Platform (Platform &amp; Connect)</label>
            </value>
            <value>
                <fullName>Core Platform (Platform)</fullName>
                <isActive>false</isActive>
                <label>Core Platform (Platform)</label>
            </value>
            <value>
                <fullName>Core Platform (Trends / Reporting)</fullName>
                <isActive>false</isActive>
                <label>Core Platform (Trends / Reporting)</label>
            </value>
            <value>
                <fullName>Core Platform (Trends)</fullName>
                <isActive>false</isActive>
                <label>Core Platform (Trends)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>