objects/Use_Case__c/fields/Solution_Area__c.field-meta.xml
<CustomField>
    <fullName>Solution_Area__c</fullName>
    <inlineHelpText>Please choose the platform tier or solution that this use case is related to or relies upon.  If a module was chosen for module relationship please make sure that module is part of the platform tier or solution chosen here.</inlineHelpText>
    <label>Solution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform Tier 1 - Core X1</fullName>
                <label>Core X1</label>
            </value>
            <value>
                <fullName>Platform Tier 1 - Core X2</fullName>
                <label>Core X2</label>
            </value>
            <value>
                <fullName>Platform Tier 1 - Core X3</fullName>
                <label>Core X3</label>
            </value>
            <value>
                <fullName>DEX</fullName>
            </value>
            <value>
                <fullName>Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Incident Response</fullName>
            </value>
            <value>
                <fullName>Risk and Compliance</fullName>
            </value>
            <value>
                <fullName>Optional Add-Ons</fullName>
            </value>
            <value>
                <fullName>Digital User Experience</fullName>
                <isActive>false</isActive>
                <label>Digital User Experience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>