objects/Use_Case__c/fields/Use_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Description__c</fullName>
    <inlineHelpText>Longer description of the use case that provides more detailed information about what is needed to successfully implement this use case and/or the value the use case provides.</inlineHelpText>
    <label>Use Case Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>