objects/Use_Case__c/fields/Use_Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Summary__c</fullName>
    <inlineHelpText>Please enter in the format of Doing X to Achieve Y.  For example, &quot;Utilizing OS patching capabilities to remediate vulnerabilities on production servers&quot;</inlineHelpText>
    <label>Use Case Summary</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>