objects/Use_Case__c/validationRules/Cannot_Make_Change_on_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Make_Change_on_Active</fullName>
    <active>true</active>
    <description>SS-6499 : “Active” checkbox only accessible and “Case Name” only editable by Approvers.</description>
    <errorConditionFormula>AND(
    OR(
       AND(NOT(ISNEW()),
       OR(ISCHANGED( Name ),ISCHANGED( Active__c ))
       ), 
       AND( ISNEW(), Active__c = TRUE)
    ),
    NOT($Permission.Use_Case_Field_Update),
    NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorMessage>The &quot;Active&quot; field is only accessible and editable by approvers. Please contact Approvers (Jake Turner, Brian Cutick, Ed Debish, Stacey Clark, Ken Smiley) if changes are required.</errorMessage>
</ValidationRule>