objects/Use_Case__c/validationRules/Cloned_record_must_be_in_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Cloned_record_must_be_in_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>ISCLONE() &amp;&amp; ISNEW() &amp;&amp; !ISPICKVAL(Status__c, &quot;Draft&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please make sure Status is Draft before saving.</errorMessage>
</ValidationRule>